fixed layout issues

--- a/ug-first-year/common.css
+++ b/ug-first-year/common.css
@@ -38,6 +38,7 @@
 .card-img-top {
     aspect-ratio: 16/9;
     object-fit: cover;
+    max-height: 12rem;
 }
 
 .card.card-disabled {
